--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -292,6 +292,10 @@ body {
     left: 100%;
     visibility: visible;
   }
+
+  .get-started {
+    cursor: pointer;
+  }
   
   @media (max-width: 1366px) {
     .navbar .dropdown .dropdown ul {
@@ -415,7 +419,7 @@ body {
   --------------------------------------------------------------*/
   #hero {
     width: 100%;
-    height: 100vh;
+    height: auto;
     background: url("../img/hero/hero-bg.jpg") top center;
     background-size: cover;
     position: relative;
@@ -439,16 +443,18 @@ body {
 
   #hero img {
     cursor: pointer;
-    width:80%;
+    width:50%;
   }
 
   #hero h1 {
     margin: 0;
-    font-size: 56px;
+    font-size: 38px;
     font-weight: 700;
     line-height: 64px;
     color: #fff;
     font-family: "Poppins", sans-serif;
+    max-width: 100%;
+  height: auto;
   }
   
   #hero h1 span {
@@ -458,11 +464,11 @@ body {
   #hero h2 {
     color: rgba(255, 255, 255, 0.9);
     margin: 10px 0 0 0;
-    font-size: 24px;
+    font-size: 22px;
   }
   
   #hero .icon-box {
-    padding: 30px 20px;
+    padding: 10px 0px;
     transition: ease-in-out 0.3s;
     border: 1px solid rgba(255, 255, 255, 0.3);
     height: 100%;
@@ -1564,7 +1570,7 @@ body {
   #footer .footer-top .footer-newsletter form input[type=submit]:hover {
     background: #ffcd6b;
   }
-  
+            
   #footer .copyright {
     text-align: center;
     padding-top: 10px;
