--- a/template/index.html
+++ b/template/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>OJT Webpage</title>
+  <title>Gp Bootstrap Template - Index</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -86,7 +86,7 @@
 
       <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
         <div class="col-xl-6 col-lg-8">
-          <h1>Need training, internship, or OJT<span>?</span></h1>
+          <h1>Powerful Digital Solutions With Gp<span>.</span></h1>
           <h2>We are team of talented digital marketers</h2>
         </div>
       </div>
@@ -130,7 +130,7 @@
   <main id="main">
 
     <!-- ======= About Section ======= -->
-    <!--<section id="about" class="about">
+    <section id="about" class="about">
       <div class="container" data-aos="fade-up">
 
         <div class="row">
@@ -156,11 +156,10 @@
         </div>
 
       </div>
-    </section>-->
-    <!-- End About Section -->
+    </section><!-- End About Section -->
 
     <!-- ======= Clients Section ======= -->
- <!--   <section id="clients" class="clients">
+    <section id="clients" class="clients">
       <div class="container" data-aos="zoom-in">
 
         <div class="clients-slider swiper">
@@ -178,11 +177,10 @@
         </div>
 
       </div>
-    </section>-->
-    <!-- End Clients Section -->
+    </section><!-- End Clients Section -->
 
     <!-- ======= Features Section ======= -->
-    <!--<section id="features" class="features">
+    <section id="features" class="features">
       <div class="container" data-aos="fade-up">
 
         <div class="row">
@@ -212,7 +210,7 @@
         </div>
 
       </div>
-    </section>--><!-- End Features Section -->
+    </section><!-- End Features Section -->
 
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
@@ -291,7 +289,7 @@
     </section><!-- End Cta Section -->
 
     <!-- ======= Portfolio Section ======= -->
-    <!--<section id="portfolio" class="portfolio">
+    <section id="portfolio" class="portfolio">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -441,10 +439,10 @@
         </div>
 
       </div>
-    </section>--><!-- End Portfolio Section -->
+    </section><!-- End Portfolio Section -->
 
     <!-- ======= Counts Section ======= -->
-    <!--<section id="counts" class="counts">
+    <section id="counts" class="counts">
       <div class="container" data-aos="fade-up">
 
         <div class="row no-gutters">
@@ -488,15 +486,15 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div><!-- End .content-->
           </div>
         </div>
 
       </div>
-    </section>--><!-- End Counts Section -->
+    </section><!-- End Counts Section -->
 
     <!-- ======= Testimonials Section ======= -->
-   <!-- <section id="testimonials" class="testimonials">
+    <section id="testimonials" class="testimonials">
       <div class="container" data-aos="zoom-in">
 
         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
@@ -513,7 +511,7 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
-            </div>
+            </div><!-- End testimonial item -->
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -526,7 +524,7 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
-            </div>
+            </div><!-- End testimonial item -->
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -539,7 +537,7 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
-            </div>
+            </div><!-- End testimonial item -->
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -552,7 +550,7 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
-            </div>
+            </div><!-- End testimonial item -->
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -565,17 +563,16 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
-            </div>
+            </div><!-- End testimonial item -->
           </div>
           <div class="swiper-pagination"></div>
         </div>
 
       </div>
-    </section>-->
-    <!-- End Testimonials Section -->
+    </section><!-- End Testimonials Section -->
 
     <!-- ======= Team Section ======= -->
-    <!--<section id="team" class="team">
+    <section id="team" class="team">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -660,7 +657,7 @@
         </div>
 
       </div>
-    </section>--><!-- End Team Section -->
+    </section><!-- End Team Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
